bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Erreur de compilation :
MonkeyTrouble:4: error: value ! is not a member of Boolean
  if ((aSmile! && bSmile) || (aSmile && !bSmile)){
             ^MonkeyTrouble:4: error: not found: value &&
  if ((aSmile! && bSmile) || (aSmile && !bSmile)){
               ^